# 3d-engine

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
assets/shaders/: atrous.comp  pathtrace.comp  resolve.comp
cmake/: Dependencies.cmake
docs/: ROADMAP.md
editor/: CMakeLists.txt
editor/src/: CommandStack.h  EditorApp.cpp  EditorApp.h  EditorCamera.cpp  EditorCamera.h  ExtrudeTool.cpp  ExtrudeTool.h  FileDialog.cpp  FileDialog.h  SculptTool.cpp  SculptTool.h  main.cpp
engine/: CMakeLists.txt
engine/src/forge/assets/: MeshFactory.cpp  MeshFactory.h  SceneFormat.cpp  StlExporter.cpp  StlExporter.h
engine/src/forge/geometry/: MeshBoolean.cpp  MeshBoolean.h  MeshEdit.cpp  MeshEdit.h  MeshRemesh.cpp  MeshRemesh.h
engine/src/forge/raytrace/: BVH.cpp  PathTracer.cpp  PathTracer.h
engine/src/forge/scene/: DropToGround.cpp  DropToGround.h
tests/: CMakeLists.txt  test_bvh.cpp  test_droptoground.cpp  test_framework.h  test_geometry.cpp  test_main.cpp  test_sceneformat.cpp  test_uuid.cpp
